--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.samarlandsoft.nfc_mobile_prototype">
-   <application
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
+    <application
         android:label="Salt &amp; Satoshi NFC"
         android:icon="@mipmap/ic_launcher">
         <activity
