--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^7.3.1
   get_it: ^7.2.0
   dartz: ^0.10.0
+  nfc_manager: ^3.1.0
 
 dev_dependencies:
   flutter_test:
