--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,12 @@ dependencies:
   flutter_bloc: ^7.3.1
   get_it: ^7.2.0
   dartz: ^0.10.0
+
+  dart_jsonwebtoken: ^2.4.0
   nfc_manager: ^3.1.0
+  web3dart: ^2.3.1
+
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
