desing & code refactoring, some new features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
+  carousel_slider: ^4.0.0
+  flutter_switch: ^0.3.2
 
   flutter_bloc: ^7.3.1
   get_it: ^7.2.0
@@ -38,12 +40,13 @@ flutter:
 
   assets:
     - assets/icons/
+    - assets/images/
     - assets/fonts/
 
   fonts:
-    - family: Poppins
+    - family: Montserrat
       fonts:
-        - asset: assets/fonts/Poppins-Medium.ttf
+        - asset: assets/fonts/Montserrat-Medium.ttf
 
 flutter_icons:
   android: true
@@ -51,4 +54,5 @@ flutter_icons:
   image_path: "assets/icons/icon.png"
 
 flutter_native_splash:
-  background_image: assets/icons/splash.png
+  background_image: assets/images/splash.png
+  android_gravity: clip_vertical
