--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,8 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/icons/icon.png"
+  image_path_ios: "assets/icons/icon.jpg"
+  image_path_android: "assets/icons/icon.png"
 
 flutter_native_splash:
   color: "#0e0e0e"
