--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_switch: ^0.3.2
   cached_network_image: ^3.1.0+1
+  simple_ripple_animation: ^0.0.3
 
   flutter_bloc: ^7.3.1
   get_it: ^7.2.0
