--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,19 @@ dependencies:
   nfc_manager: ^3.1.0
   web3dart: ^2.3.1
 
+  firebase_core: ^1.10.0
+  cloud_firestore: ^3.1.0
+  firebase_storage: ^10.1.0
+
+  flutter_logs: ^2.1.4
+  device_info_plus: ^3.1.1
+  package_info_plus: ^1.3.0
+
   url_launcher: ^6.0.15
   connectivity_plus: ^2.0.3
 
   shared_preferences: ^2.0.8
+  path_provider: ^2.0.7
   permission_handler: ^8.2.5
 
 dev_dependencies:
