--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   get_it: ^7.2.0
   dartz: ^0.10.0
 
-  dart_jsonwebtoken: ^2.4.0
+  crypto: ^3.0.1
   nfc_manager: ^3.1.0
   web3dart: ^2.3.1
 
