--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -10,7 +10,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Salt&amp;Satoshi Genesis</string>
+	<string>Salt&amp;Satoshi Genesis Debug</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
