--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,36 +6,36 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.2
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  google_fonts: ^2.1.0
+  cupertino_icons: ^1.0.4
+  google_fonts: ^2.3.1
   carousel_slider: ^4.0.0
-  cached_network_image: ^3.1.0+1
+  cached_network_image: ^3.2.0
   flutter_circular_text: ^0.3.1
 
-  flutter_bloc: ^7.3.1
+  flutter_bloc: ^8.0.1
   get_it: ^7.2.0
-  dartz: ^0.10.0
+  dartz: ^0.10.1
 
   crypto: ^3.0.1
-  nfc_manager: ^3.1.0
-  web3dart: ^2.3.1
+  nfc_manager: ^3.1.1
+  web3dart: ^2.3.5
 
-  url_launcher: ^6.0.15
-  connectivity_plus: ^2.0.3
-  permission_handler: ^8.2.5
+  url_launcher: ^6.0.20
+  connectivity_plus: ^2.3.0
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
-  flutter_native_splash: ^1.2.4
+  flutter_lints: ^1.0.4
+  flutter_native_splash: ^2.1.5
 
 flutter:
   uses-material-design: true
